--- a/cucumber/build.gradle
+++ b/cucumber/build.gradle
@@ -21,7 +21,9 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'com.j256.ormlite:ormlite-core:4.48'
+  compile 'com.j256.ormlite:ormlite-android:4.48'
+
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
