--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,7 +4,7 @@ android {
   compileSdkVersion 24
   buildToolsVersion "23.0.3"
   defaultConfig {
-    applicationId "io.bffcorreia.cucumber"
+    applicationId "com.example.cucumber"
     minSdkVersion 17
     targetSdkVersion 24
     versionCode 1
@@ -20,10 +20,13 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'com.j256.ormlite:ormlite-core:4.48'
+  compile 'com.j256.ormlite:ormlite-android:4.48'
+
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
   compile 'com.android.support:appcompat-v7:24.2.1'
   testCompile 'junit:junit:4.12'
+  compile project(path: ':cucumber')
 }
